--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "open_deep_research"
+name = "influflow"
 version = "0.0.15"
-description = "Planning, research, and report generation."
+description = "influflow"
 authors = [
     { name = "Lance Martin" }
 ]
@@ -48,11 +48,10 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["open_deep_research", "tests"]
+packages = ["influflow"]
 
 [tool.setuptools.package-dir]
-"open_deep_research" = "src/open_deep_research"
-"tests" = "tests"
+"influflow" = "src/influflow"
 
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
