--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = [
-    "langgraph>=0.2.55",
+    "langgraph>=0.4.8,<0.5.0",
     "langchain-community>=0.3.9",
-    "langchain-openai>=0.3.7",
+    "langchain-openai>=0.3.22,<0.4.0",
     "langchain-anthropic>=0.3.15",
     "langchain-mcp-adapters>=0.1.6",
     "langchain-deepseek>=0.1.2",
     "langchain-tavily",
     "langchain-groq>=0.2.4",
-    "openai>=1.61.0",
+    "openai>=1.86.0,<1.90.0",
     "tavily-python>=0.5.0",
     "arxiv>=2.1.3",
     "pymupdf>=1.25.3",
@@ -36,8 +36,8 @@ dependencies = [
     "azure-search-documents>=11.5.2",
     "rich>=13.0.0",
     "langgraph-cli[inmem]>=0.3.1",
-    "langsmith>=0.3.37",
-    "streamlit>=1.39.0",
+    "langsmith>=0.3.45,<0.4.0",
+    "streamlit>=1.46.0,<1.50.0",
 ]
 
 [project.optional-dependencies]
