--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 OPENAI_API_KEY=sk-xxx
-ANTHROPIC_API_KEY=sk-xxx
+LANGSMITH_ENDPOINT=xxx
+LANGSMITH_API_KEY=xxx
+LANGSMITH_PROJECT=xxx
 TAVILY_API_KEY=xxx
-GROQ_API_KEY=xxx
-PERPLEXITY_API_KEY=xxx
-LINKUP_API_KEY=xxx
+LANGCHAIN_TRACING_V2=true
+
