--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "fastapi>=0.104.0,<0.120.0",
     "uvicorn[standard]>=0.24.0,<0.30.0",
     "python-multipart>=0.0.6",
+    # Supabase存储依赖
+    "supabase>=2.9.0,<3.0.0",
 ]
 
 [project.optional-dependencies]
